[gd_scene load_steps=4 format=3 uid="uid://x82n1vbughug"]

[ext_resource type="Script" uid="uid://dh3g472mg6gj" path="res://Scripts/block/wires_block.gd" id="1_fq4ed"]
[ext_resource type="PackedScene" uid="uid://cy1yprb1fcpyi" path="res://Scenes/Suitcase_block.tscn" id="3_eiwlf"]
[ext_resource type="PackedScene" uid="uid://btdgpsl5axthc" path="res://Scenes/notifier.tscn" id="4_811i6"]

[node name="Node3D" type="Node3D" groups=["puzzle_block"]]
script = ExtResource("1_fq4ed")

[node name="left_col" type="CSGCombiner3D" parent="."]

[node name="left_1" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, 0.0386393)
size = Vector3(0.01, 0.01, 0.01)

[node name="left_2" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, 0.0247801)
size = Vector3(0.01, 0.01, 0.01)

[node name="left_3" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, 0.0123466)
size = Vector3(0.01, 0.01, 0.01)

[node name="left_4" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.000814226)
size = Vector3(0.01, 0.01, 0.01)

[node name="left_5" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.0139931)
size = Vector3(0.01, 0.01, 0.01)

[node name="left_6" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.0272783)
size = Vector3(0.01, 0.01, 0.01)

[node name="left_7" type="CSGBox3D" parent="left_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.0401964)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_col" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0731446, 0, -0.0128188)

[node name="right_1" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, 0.0386393)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_2" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, 0.0247801)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_3" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, 0.0123466)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_4" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.000814226)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_5" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.0139931)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_6" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.0272783)
size = Vector3(0.01, 0.01, 0.01)

[node name="right_7" type="CSGBox3D" parent="right_col"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0479415, 0.0681711, -0.0401964)
size = Vector3(0.01, 0.01, 0.01)

[node name="state" parent="." instance=ExtResource("4_811i6")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.047, 0.058, 0.046)

[node name="Node3D" parent="." instance=ExtResource("3_eiwlf")]
